--- a/index.html
+++ b/index.html
@@ -37,5 +37,21 @@
 		</div>
 
 	</main>
+	<footer class="footer">
+		<p>
+			<a href="#">sobre</a>
+			<a href="#">ajuda</a>
+			<a href="#">impresa</a>
+			<a href="#">api</a>
+			<a href="#">carreira</a>
+			<a href="#">privacidade</a>
+			<a href="#">termos</a>
+			<a href="#">localização</a>
+			<a href="#">contas mais relevantes</a>
+			<a href="#">hashtags</a>
+			<a href="#">idiomas</a>
+		</p>
+		<p>&copy; 2020 instagram do facebook</p>
+	</footer>
 </body>
 </html>
