--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<title>intagram interface</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="icon" href="img/icon.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://cdn.lineicons.com/2.0/LineIcons.css" rel="stylesheet">
 </head>
