--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>intagram interface</title>
+	<title>Intagram</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="icon" href="img/icon.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
